# paise2

./: .gitignore  README.dev.md  README.md  pyproject.toml
docs/: profile-plugin-loading.md
docs/in-progress/: prompt-plan.md  spec.md
docs/memory-bank/: README.md  activeContext.md  productContext.md  progress.md  projectbrief.md  prompt2-completion.md  systemPatterns.md  techContext.md
docs/plugins/: prompt-plan.md  spec.md
docs/specs/: commandline.md  plugin-system.md
src/paise2/: __init__.py  __main__.py  cli.py  constants.py  main.py  models.py  monitoring.py
src/paise2/config/: __init__.py  diffing.py  factory.py  manager.py  models.py  providers.py
src/paise2/plugins/: __init__.py
src/paise2/plugins/cli/: __init__.py  config_commands.py  reset_commands.py
src/paise2/plugins/core/: __init__.py  hosts.py  interfaces.py  jobs.py  manager.py  registry.py  startup.py  tasks.py
src/paise2/plugins/providers/: __init__.py  cache.py  content_extractors.py  content_fetchers.py  content_sources.py  lifecycle.py  task_queue.py
src/paise2/plugins/workers/: cli.py  sqlite.py  sqlite.yaml  worker.yaml
src/paise2/profiles/: __init__.py  factory.py
src/paise2/profiles/app/: __init__.py  content_sources.py  lifecycles.py
src/paise2/profiles/base/: __init__.py  logging.py
src/paise2/profiles/base/cli/: config.py  reset.py  run.py  status.py  validate.py  version.py
src/paise2/profiles/common/workers/: __init__.py  configuration.py
src/paise2/profiles/development/: __init__.py  cache.py  content_source.py  data_storage.py  job_queue.py  logging.py  logging.yaml  state_storage.py  task_queue.yaml  worker.yaml  workers.py
src/paise2/profiles/production/: __init__.py  cache.py  data_storage.py  job_queue.py  logging.yaml  state_storage.py  worker.yaml  workers.py
src/paise2/profiles/test/: __init__.py  cache.py  configuration.py  data_storage.py  job_queue.py  state_storage.py
src/paise2/state/: __init__.py  models.py  plugin_registration.py  providers.py
src/paise2/storage/: __init__.py  providers.py
src/paise2/utils/: __init__.py  logging.py
src/paise2/workers/: __init__.py  context.py
tests/: __init__.py
tests/fixtures/: __init__.py  example_multi_plugin.py  example_register_plugin.py  factory.py  mock_plugins.py
tests/fixtures/cli/: __init__.py  example_cli_plugin.py  second_cli_plugin.py
tests/integration/: __init__.py  test_app_profile_content_sources.py  test_async_execution.py  test_complete_startup_sequence.py  test_content_source_integration.py  test_end_to_end_pipeline.py  test_full_content_pipeline.py  test_lifecycle_actions.py  test_main_application.py  test_mock_plugin_integration.py  test_plugin_isolation.py  test_plugin_performance.py  test_plugin_validation.py  test_system_health_monitoring.py  test_task_queue_profile_integration.py
tests/unit/: __init__.py  test_cache_providers.py  test_cache_registration.py  test_cli_extension_point.py  test_cli_extension_point_simple.py  test_config_cli_plugin.py  test_configuration.py  test_configuration_diffing.py  test_configuration_factory.py  test_configuration_integration.py  test_configuration_singleton.py  test_content_extractor_pipeline.py  test_content_fetcher_pipeline.py  test_content_source_task_scheduling.py  test_data_storage_providers.py  test_data_storage_registration.py  test_hosts.py  test_interfaces.py  test_job_queue_providers.py  test_job_queue_registration.py  test_mock_plugins.py  test_models.py  test_plugin_system_manager.py  test_profile_file_configuration_provider.py  test_profile_plugins.py  test_registry.py  test_reset_action_protocol.py  test_reset_cli_commands.py  test_startup.py  test_state_providers.py  test_state_registration.py  test_task_definition_and_singletons.py  test_task_queue_providers.py  test_task_queue_registration.py  test_worker_configuration.py  test_worker_context.py
