# This project uses 'uv' for dependency management, NOT 'pip'
# Use: uv add <package>, uv run pytest, etc.
# See README.dev.md for full details

[project]
name = "paise2"
version = "0.1.0"
description = "Desktop search engine indexer with extensible plugin system"
readme = "README.md"
authors = [
    { name = "James Hugman", email = "james@hugman.tv" }
]
requires-python = ">=3.13"
dependencies = [
    "pluggy>=1.0.0",
    "typing-extensions>=4.0.0",
    "pyyaml>=6.0.0",
    "huey>=2.5.3",
    "click>=8.2.1",
    "rich>=14.0.0",
]

[project.scripts]
paise2 = "paise2.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "ruff>=0.0.290",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "PERF", "FURB", "LOG", "RUF"]
ignore = [
    "COM812", "ISC001",  # Conflict with ruff format
    "S101",  # Use of assert detected (needed for pytest)
    "DTZ005",  # datetime.now() without tz (ok for tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG002",  # Unused method arguments in test mock classes
    "PLR2004", # Magic value used in comparison (acceptable in tests)
    "C901",    # Complex functions in comprehensive test cases
]

# Update mypy task to include tests directory
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Start with moderate strictness for test files
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
# Allow untyped decorators for pytest decorators
disallow_untyped_decorators = false
# Allow some return any for mock objects
warn_return_any = false
check_untyped_defs = true

# Ignore missing stubs for external libraries
[[tool.mypy.overrides]]
module = "huey.*"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.13",
    "types-pyyaml>=6.0.12.20250516",
]
